<resources>
    <string name="app_name">jmart-android</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont Have Account? \nRegister Now</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="hello_user">Hello User!</string>
    <string name="name">name</string>
    <string name="user">User</string>
    <string name="products">PRODUCTS</string>
    <string name="filter">FILTER</string>
    <string name="prev">PREV</string>
    <string name="next">NEXT</string>
    <string name="go">GO</string>
    <string-array name="shipmentPlans">
        <item>INSTANT</item>
        <item>SAME DAY</item>
        <item>NEXT DAY</item>
        <item>REGULER</item>
        <item>KARGO</item>
    </string-array>
    <string-array name="product">
        <item>-</item>
        <item>BOOK</item>
        <item>KITCHEN</item>
        <item>ELECTRONIC</item>
        <item>FASHION</item>
        <item>GAMING</item>
        <item>GADGET</item>
        <item>MOTHERCARE</item>
        <item>COSMETICS</item>
        <item>HEALTHCARE</item>
        <item>FURNITURE</item>
        <item>JEWELRY</item>
        <item>TOYS</item>
        <item>FNB</item>
        <item>STATIONERY</item>
        <item>SPORTS</item>
        <item>AUTOMOTIVE</item>
        <item>PETCARE</item>
        <item>ART_CRAFT</item>
        <item>CARPENTRY</item>
        <item>MISCELLANEOUS</item>
        <item>PROPERTY</item>
        <item>TRAVEL</item>
        <item>WEDDING</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="highest_price">Highest Price</string>
    <string name="name_filter">Name</string>
</resources>