<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteBG"
    tools:context=".LoginActivity">

    <EditText
        android:id = "@+id/email"
        android:layout_width = "300dp"
        android:layout_centerHorizontal="true"
        android:layout_height = "wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="200dp"
        android:inputType = "textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width = "300dp"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        />

    <TextView
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/dont_have_an_account"
        android:textAlignment="center"/>

</RelativeLayout>