<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context= ".ProductsFragment">

    <RelativeLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/prev_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/prev" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/next_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/prev_button"
            android:text="@string/next" />

        <EditText
            android:id="@+id/page"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/next_button"
            android:inputType="text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/go_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@id/page"
            android:text="@string/go" />

    </RelativeLayout>
    <ListView
        android:id="@+id/list_product"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"/>

</FrameLayout>