<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="start"
        android:id="@+id/name_layout">
        <TextView android:layout_height="20dp"
            android:layout_width="wrap_content"
            android:text="@string/name_filter"
            android:id="@+id/name_filter"
            />

        <EditText
            android:id="@+id/name_filter_form"
            android:layout_width="match_parent"
            android:layout_below="@id/name_filter"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </RelativeLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/range_layout"
        android:layout_below="@id/name_layout">
        <RelativeLayout android:layout_height="fill_parent"
            android:layout_width="wrap_content"
            android:gravity="start">
            <TextView android:layout_height="20dp"
                android:layout_width="wrap_content"
                android:text="@string/lowest_price"
                android:id="@+id/lowest_price"
                />

            <EditText
                android:id="@+id/range_lowest"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lowest_price"
                android:inputType="text" />
        </RelativeLayout>

        <TextView
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="to"
            android:layout_marginVertical="20dp"

            />

        <RelativeLayout android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="end"
            >

            <TextView
                android:id="@+id/highest_price"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/highest_price" />

            <EditText
                android:layout_below="@id/highest_price"
                android:id="@+id/range_highest"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/condition_layout"
        android:layout_below="@id/range_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16dp"
            android:text="Product Condition"
            android:layout_marginRight="100dp"
            />
        <CheckBox android:id="@+id/checkbox_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New" />
        <CheckBox android:id="@+id/checkbox_used"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Used"/>

    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/condition_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16dp"
            android:text="Product Category"
            android:layout_marginRight="100dp"
            />
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/product"/>
    </LinearLayout>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="APPLY"
            android:layout_marginRight="50dp"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clear_button"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="CLEAR"
            />
    </LinearLayout>

</RelativeLayout>